--- a/resource/scss/common/header.scss
+++ b/resource/scss/common/header.scss
@@ -46,6 +46,7 @@ header {
     nav {
         background: #fff;
         font-size: 12px;
+        font-size: 0;
         width: 100%;
         padding-left: 70%;
         margin-left: -70%;
@@ -65,8 +66,8 @@ header {
             overflow: hidden;
             display: inline-block;
             width: 100%;
-            min-width: 108px;
-            padding: 0 0 0 54px;
+            //min-width: 90px;
+            padding: 0 0 0 21px;
             margin-bottom: 9px;
             font-size: 13px;
             position: relative;
@@ -96,7 +97,7 @@ header {
                 width: 1px;
                 height: 0;
                 border-bottom: 16px solid #000;
-                left: 43px;
+                left: 10px;
                 top: 0;
                 transform: rotate(-25deg);
                 @include mobile {
@@ -129,10 +130,10 @@ header {
             }
             nav {
                 width: 100%;
-                padding-left: 300px;
+                padding-left: 320px;
                 margin-left: -300px;
                 @include mobile {
-                    padding-left: 130px;
+                    padding-left: 150px;
                     margin-left: -130px;
                 }
                 #nav2, #nav3, #nav4, #nav5, #nav6 {
@@ -145,7 +146,7 @@ header {
                     -webkit-transition: width 0 0.5s;
                     -moz-transition: width 0 0.5s;
                     transition: width 0 0.5s;
-                    width: 120px;
+                    width: auto;
                     @include mobile {
                         width: 80px;
                     }
