--- a/resource/scss/common/common.scss
+++ b/resource/scss/common/common.scss
@@ -48,7 +48,7 @@ html, body {
         padding: 0 10px;
     }
 }
-.four-container {
+#section-content .four-container {
     font-size: 0;
     width: 100%;
     box-sizing: border-box;
@@ -63,6 +63,13 @@ html, body {
         box-sizing: border-box;
         vertical-align: top;
         padding: 0 20px;
+        p {
+            text-align: center;
+            font-weight: normal;
+            font-size: 12px !important;
+            letter-spacing: 0.05em !important;
+            margin-top: 0px !important;
+        }
     }
     .img {
         width: 100%;
@@ -70,13 +77,7 @@ html, body {
             width: 100%;
         }
     }
-    p {
-        text-align: center;
-        font-weight: normal;
-        font-size: 12px !important;
-        letter-spacing: 0.1em;
-        margin-top: 0px;
-    }
+
 }
 h5 {
     margin-top: 10px;
